---
source: tests/core/spec.rs
assertion_line: 235
expression: formatter
---
schema @server @upstream {
  query: Query
}

type Query {
  usersList: [User] @graphQL(baseURL: "http://upstream/graphql", name: "users")
}

type User {
  id: Int
  name: String
}
